# uni-cicd-game

./: .coverage  README.md  boards.py  constants.py  main.py  maze.txt  mazetest.txt  pauser.py  pyproject.toml  pytest.ini  shell.nix
.github/workflows/: check.yaml  lint.yaml
food/: fruit.py  pellets.py
ghosts/: entity.py  ghost.py
maze/: mazedata.py
modes/: modes.py
movement/: nodes.py  stack.py  vector.py
pacman/: pacman.py
pellets/: pellet.py  pellets.py
sprites/: sprite_manager.py
styles/: animation.py  text.py
styles/sprite/: sprite_manager.py  sprites.py
tests/: conftest.py  testPacmanMovement.py  test_entity.py  test_example.py  test_game_controller.py  test_ghost.py  test_integration.py  test_nodes.py  test_pacman.py  test_pellets.py  test_vector.py
