[project]
name = "uni-cicd-game"
version = "0.1.0"
description = "PacMan game for CI/CD classes in University"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.3",
    "pygame>=2.6.1",
    "Pillow>=10.2.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
    "pytest-html>=4.1.1",
    "pytest-cov>=6.0.0",
]
